--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Harman</string>
+    <string name="notification_message">This is 1 minute alarm notification</string>
+    <string name="notification_title">Wipro Assignment</string>
+    <string name="channel_id">com.wipro.harman.channel</string>
 </resources>
